--- a/index.html
+++ b/index.html
@@ -11,21 +11,35 @@
     <body>
         <div class="main">
             <div class="panel">
-                <div class="controlbtn">123</div>
-                <div class="controlbtn">123</div>
-                <div class="controlbtn">123</div>
-                <div class="controlbtn">123</div>
+                <div class="opponentchoice">
+                    <button class="playerOpponent">vs Player</button>
+                    <button class="aiOpponent">vs AI</button>
+                </div>
+                <div class="player1">
+                    <div class="name">Player1</div>
+                    <button class="symbol">X</button>
+                </div>
+                <div class="player2">
+                    <div class="name">Player2</div>
+                    <button class="symbol">O</button>
+                </div>
+                <div class="controlbtn">
+                    <button class="start">Start Game</button>
+                    <button class="reset" >Reset</button>
+                </div>
+                
             </div>
             <div class="gameboard">
-                <div class="grid 1"></div>
-                <div class="grid 2"></div>
-                <div class="grid 3"></div>
-                <div class="grid 4"></div>
-                <div class="grid 5"></div>
-                <div class="grid 6"></div>
-                <div class="grid 7"></div>
-                <div class="grid 8"></div>
-                <div class="grid 9"></div>
+                <div class="annoucement"></div>
+                <div class="grid"></div>
+                <div class="grid"></div>
+                <div class="grid"></div>
+                <div class="grid"></div>
+                <div class="grid"></div>
+                <div class="grid"></div>
+                <div class="grid"></div>
+                <div class="grid"></div>
+                <div class="grid"></div>
             </div>
         </div>
     </body>
