--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="banner">Tic - Tac - Toe</div>
         <div class="main">
+            <div class="annoucement">Choose Your Opponent and Token! X will go first.</div>
             <div class="panel">
                 <div class="opponentchoice">
-                    <button class="playerOpponent">vs Player</button>
-                    <button class="aiOpponent">vs AI</button>
+                    <button class="playeropponent">vs Player</button>
+                    <button class="aiopponent">vs AI</button>
                 </div>
                 <div class="player1">
                     <div class="name">Player1</div>
@@ -25,12 +27,12 @@
                 </div>
                 <div class="controlbtn">
                     <button class="start">Start Game</button>
+                    <button class="restart" >Restart</button>
                     <button class="reset" >Reset</button>
                 </div>
                 
             </div>
             <div class="gameboard">
-                <div class="annoucement"></div>
                 <div class="grid"></div>
                 <div class="grid"></div>
                 <div class="grid"></div>
